force-app/main/default/objects/PureCloud__c/PureCloud__c.object-meta.xml
<CustomObject>
    <label>PureCloud-Call Agent</label>
    <nameField>
        <label>PureCloud- Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PureCloud-Call Agent</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>