force-app/main/default/objects/PureCloud__c/fields/Acd_SUM__c.field-meta.xml
<CustomField>
    <fullName>Acd_SUM__c</fullName>
    <label>Acd SUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>