force-app/main/default/objects/PureCloud__c/fields/ACW_Count__c.field-meta.xml
<CustomField>
    <fullName>ACW_Count__c</fullName>
    <label>ACW Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>