force-app/main/default/objects/PureCloud__c/fields/Admin_Sum__c.field-meta.xml
<CustomField>
    <fullName>Admin_Sum__c</fullName>
    <label>Admin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>