force-app/main/default/objects/PureCloud__c/fields/Agent_Role__c.field-meta.xml
<CustomField>
    <fullName>Agent_Role__c</fullName>
    <formula>Agent_Name__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Role</label>
    <type>Text</type>
</CustomField>