force-app/main/default/objects/PureCloud__c/fields/AHT_Outbound__c.field-meta.xml
<CustomField>
    <fullName>AHT_Outbound__c</fullName>
    <formula>IF(AHT_Outbound_Sum__c/3600 &lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT(FLOOR(AHT_Outbound_Sum__c/3600)) + &quot;:&quot; + IF(FLOOR(MOD(AHT_Outbound_Sum__c,3600)/60)&lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT( FLOOR(MOD(AHT_Outbound_Sum__c,3600)/60)) + &quot;:&quot; + IF( ROUND(MOD(MOD(AHT_Outbound_Sum__c,3600),60),0)&lt; 10, &apos;0&apos;,&apos;&apos;)+ TEXT(ROUND(MOD(MOD(AHT_Outbound_Sum__c,3600),60),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AHT Outbound</label>
    <type>Text</type>
</CustomField>