force-app/main/default/objects/PureCloud__c/fields/AHT_Outbound_Sum__c.field-meta.xml
<CustomField>
    <fullName>AHT_Outbound_Sum__c</fullName>
    <formula>IF ( Talk_Count__c == 0, 0, 
(Talk_Sum__c +  ACW_Sum__c + Hold_Sum__c) /  Talk_Count__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AHT Outbound Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>