force-app/main/default/objects/PureCloud__c/fields/AHT_Sum__c.field-meta.xml
<CustomField>
    <fullName>AHT_Sum__c</fullName>
    <description>awalnya : Handle_Sum__c /  ACD_Count__c
IF ( ACD_Count__c == 0, 0,  (Talk_Sum__c - Hold_Sum__c) /  ACD_Count__c)</description>
    <formula>IF ( ACD_Count__c == 0, 0,  (Talk_Sum__c +  ACW_Sum__c + Hold_Sum__c) /  ACD_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AHT Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>