force-app/main/default/objects/PureCloud__c/fields/API_Check_API1__c.field-meta.xml
<CustomField>
    <fullName>API_Check_API1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API Check API1</label>
    <type>Checkbox</type>
</CustomField>