force-app/main/default/objects/PureCloud__c/fields/API_Check_API1_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Check_API1_Status__c</fullName>
    <description>Status hasil prose api 1</description>
    <label>API Check API1 Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>