force-app/main/default/objects/PureCloud__c/fields/API_Check_API2_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Check_API2_Date__c</fullName>
    <description>Date terakhir API 2 dipanggil</description>
    <label>API Check API2 Date</label>
    <type>DateTime</type>
</CustomField>