force-app/main/default/objects/PureCloud__c/fields/API_Check_API2_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Check_API2_Status__c</fullName>
    <description>status hasil api 2</description>
    <label>API Check API2 Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>