force-app/main/default/objects/PureCloud__c/fields/API_CHeck_API3__c.field-meta.xml
<CustomField>
    <fullName>API_CHeck_API3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API CHeck API3</label>
    <type>Checkbox</type>
</CustomField>