force-app/main/default/objects/PureCloud__c/fields/API_CHeck_API3_Date__c.field-meta.xml
<CustomField>
    <fullName>API_CHeck_API3_Date__c</fullName>
    <description>Date terakhir API 3 dipanggil</description>
    <label>API CHeck API3 Date</label>
    <type>DateTime</type>
</CustomField>