force-app/main/default/objects/PureCloud__c/fields/API_CHeck_API3_Status__c.field-meta.xml
<CustomField>
    <fullName>API_CHeck_API3_Status__c</fullName>
    <description>status hasil api 3</description>
    <label>API CHeck API3 Status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>