force-app/main/default/objects/PureCloud__c/fields/API_Check_Resync__c.field-meta.xml
<CustomField>
    <fullName>API_Check_Resync__c</fullName>
    <formula>!CONTAINS(API_Check_API1_Status__c, &apos;Okay&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>API Check Resync</label>
    <type>Checkbox</type>
</CustomField>