force-app/main/default/objects/PureCloud__c/fields/Attend__c.field-meta.xml
<CustomField>
    <fullName>Attend__c</fullName>
    <formula>!ISBLANK(Start_Login__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attend</label>
    <type>Checkbox</type>
</CustomField>