force-app/main/default/objects/PureCloud__c/fields/Available_Admin_Count__c.field-meta.xml
<CustomField>
    <fullName>Available_Admin_Count__c</fullName>
    <label>Available - Admin (Count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>