force-app/main/default/objects/PureCloud__c/fields/Available_Admin_Sum__c.field-meta.xml
<CustomField>
    <fullName>Available_Admin_Sum__c</fullName>
    <label>Available - Admin (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>