force-app/main/default/objects/PureCloud__c/fields/Available_Follow_Up_Count__c.field-meta.xml
<CustomField>
    <fullName>Available_Follow_Up_Count__c</fullName>
    <label>Available - Follow Up (Count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>