force-app/main/default/objects/PureCloud__c/fields/Available_Follow_Up_Minute__c.field-meta.xml
<CustomField>
    <fullName>Available_Follow_Up_Minute__c</fullName>
    <formula>Available_Follow_Up_Sum__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available - Follow Up (Minute)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>