force-app/main/default/objects/PureCloud__c/fields/Available_Other_Sum__c.field-meta.xml
<CustomField>
    <fullName>Available_Other_Sum__c</fullName>
    <formula>Available_Sum__c - 
Available_Admin_Sum__c -
Available_Follow_Up_Sum__c - 
Available_Outbound_Sum__c - 
Available_Walk_IN_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available - Other (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>