force-app/main/default/objects/PureCloud__c/fields/AVG_ACW_Time__c.field-meta.xml
<CustomField>
    <fullName>AVG_ACW_Time__c</fullName>
    <formula>IF(AVG_ACW__c/3600 &lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT(FLOOR(AVG_ACW__c/3600)) + &quot;:&quot; + IF(FLOOR(MOD(AVG_ACW__c,3600)/60)&lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT( FLOOR(MOD(AVG_ACW__c,3600)/60)) + &quot;:&quot; + IF( ROUND(MOD(MOD(AVG_ACW__c,3600),60),0)&lt; 10, &apos;0&apos;,&apos;&apos;)+ TEXT(ROUND(MOD(MOD(AVG_ACW__c,3600),60),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG ACW Time</label>
    <type>Text</type>
</CustomField>