force-app/main/default/objects/PureCloud__c/fields/AVG_Hold__c.field-meta.xml
<CustomField>
    <fullName>AVG_Hold__c</fullName>
    <formula>IF (ACD_Count__c == 0,
IF (Talk_Count__c == 0, 0, 
Hold_Sum__c /  Talk_Count__c),
Hold_Sum__c /  ACD_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>