force-app/main/default/objects/PureCloud__c/fields/AVG_Talk__c.field-meta.xml
<CustomField>
    <fullName>AVG_Talk__c</fullName>
    <formula>IF (ACD_Count__c == 0,
IF (Talk_Count__c == 0, 0,
Talk_Sum__c /  Talk_Count__c )
, Talk_Sum__c /  ACD_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG Talk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>