force-app/main/default/objects/PureCloud__c/fields/Away_Count__c.field-meta.xml
<CustomField>
    <fullName>Away_Count__c</fullName>
    <label>Away (Count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>