force-app/main/default/objects/PureCloud__c/fields/Away_Minute__c.field-meta.xml
<CustomField>
    <fullName>Away_Minute__c</fullName>
    <formula>Away_Sum__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Away (Minute)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>