force-app/main/default/objects/PureCloud__c/fields/Away_Sum__c.field-meta.xml
<CustomField>
    <fullName>Away_Sum__c</fullName>
    <label>Away (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>