force-app/main/default/objects/PureCloud__c/fields/Break_Other_Sum__c.field-meta.xml
<CustomField>
    <fullName>Break_Other_Sum__c</fullName>
    <label>Break - Other (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>