force-app/main/default/objects/PureCloud__c/fields/Break_Pray_Minute__c.field-meta.xml
<CustomField>
    <fullName>Break_Pray_Minute__c</fullName>
    <formula>Break_Pray_Sum__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break - Pray (Minute)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>