force-app/main/default/objects/PureCloud__c/fields/Break_Pray_Sum__c.field-meta.xml
<CustomField>
    <fullName>Break_Pray_Sum__c</fullName>
    <label>Break - Pray (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>