force-app/main/default/objects/PureCloud__c/fields/Break_Rest_Count__c.field-meta.xml
<CustomField>
    <fullName>Break_Rest_Count__c</fullName>
    <label>Break - Rest (Count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>