force-app/main/default/objects/PureCloud__c/fields/Break_Sum__c.field-meta.xml
<CustomField>
    <fullName>Break_Sum__c</fullName>
    <description>primary break</description>
    <label>Break (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>