force-app/main/default/objects/PureCloud__c/fields/Busy_Count__c.field-meta.xml
<CustomField>
    <fullName>Busy_Count__c</fullName>
    <label>Busy (Count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>