force-app/main/default/objects/PureCloud__c/fields/Busy_Minute__c.field-meta.xml
<CustomField>
    <fullName>Busy_Minute__c</fullName>
    <formula>Busy_Sum__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Busy (Minute)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>