force-app/main/default/objects/PureCloud__c/fields/Busy_Sum__c.field-meta.xml
<CustomField>
    <fullName>Busy_Sum__c</fullName>
    <label>Busy (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>