force-app/main/default/objects/PureCloud__c/fields/Coaching_Sum__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Sum__c</fullName>
    <label>Coaching</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>