force-app/main/default/objects/PureCloud__c/fields/End_Login__c.field-meta.xml
<CustomField>
    <fullName>End_Login__c</fullName>
    <label>End Login</label>
    <type>DateTime</type>
</CustomField>