force-app/main/default/objects/PureCloud__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>{SIP}_{YYYY-MM_DD}</description>
    <externalId>true</externalId>
    <inlineHelpText>{SIP}_{YYYY-MM-DD}
exp : ab24ddb8-f1ef-4cca-ae72-9f20f5975332_2018-10-08</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>