force-app/main/default/objects/PureCloud__c/fields/Follow_Up_Sum__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Sum__c</fullName>
    <label>Follow Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>