force-app/main/default/objects/PureCloud__c/fields/Handle_Count__c.field-meta.xml
<CustomField>
    <fullName>Handle_Count__c</fullName>
    <label>Handle Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>