force-app/main/default/objects/PureCloud__c/fields/Hold_Sum__c.field-meta.xml
<CustomField>
    <fullName>Hold_Sum__c</fullName>
    <label>Hold Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>