force-app/main/default/objects/PureCloud__c/fields/Late_Duration_Minute__c.field-meta.xml
<CustomField>
    <fullName>Late_Duration_Minute__c</fullName>
    <formula>IF ( ISBLANK(Schedule_Login__c), 0,
IF ( Schedule_Login__c &gt; Start_Login__c, 0,
(Start_Login__c - Schedule_Login__c) * 1440
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Duration Minute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>