force-app/main/default/objects/PureCloud__c/fields/Meal_Sum__c.field-meta.xml
<CustomField>
    <fullName>Meal_Sum__c</fullName>
    <label>Meal (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>