force-app/main/default/objects/PureCloud__c/fields/Meeting_count__c.field-meta.xml
<CustomField>
    <fullName>Meeting_count__c</fullName>
    <label>Meeting (count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>