force-app/main/default/objects/PureCloud__c/fields/Meeting_Minute__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Minute__c</fullName>
    <formula>Meeting_Sum__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting (Minute)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>