force-app/main/default/objects/PureCloud__c/fields/Meeting_Sum__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Sum__c</fullName>
    <label>Meeting (Duration)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>