force-app/main/default/objects/PureCloud__c/fields/On_Queue_Sum__c.field-meta.xml
<CustomField>
    <fullName>On_Queue_Sum__c</fullName>
    <label>On Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>