force-app/main/default/objects/PureCloud__c/fields/On_Queue_Time__c.field-meta.xml
<CustomField>
    <fullName>On_Queue_Time__c</fullName>
    <formula>IF(On_Queue_Sum__c/3600 &lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT(FLOOR(On_Queue_Sum__c/3600)) + &quot;:&quot; + IF(FLOOR(MOD(On_Queue_Sum__c,3600)/60)&lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT( FLOOR(MOD(On_Queue_Sum__c,3600)/60)) + &quot;:&quot; + IF(MOD(MOD(On_Queue_Sum__c,3600),60)&lt; 10, &apos;0&apos;,&apos;&apos;)+ TEXT(MOD(MOD(On_Queue_Sum__c,3600),60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Queue Time</label>
    <type>Text</type>
</CustomField>