force-app/main/default/objects/PureCloud__c/fields/Outbound_Sum__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Sum__c</fullName>
    <label>Outbound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>