force-app/main/default/objects/PureCloud__c/fields/Outsource_Type__c.field-meta.xml
<CustomField>
    <fullName>Outsource_Type__c</fullName>
    <inlineHelpText>only for Saturday (AFI)
jika tidak di pilih, productivity seperti hari normal</inlineHelpText>
    <label>Outsource Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>