force-app/main/default/objects/PureCloud__c/fields/Productivity__c.field-meta.xml
<CustomField>
    <fullName>Productivity__c</fullName>
    <formula>IF ( TEXT(Outsource_Type__c) == &apos;&apos;,
((End_Login__c - Start_Login__c) * 1440) 
- 
((Break_Pray_Sum__c + Break_Rest_Sum__c + Break_Lunch_Sum__c + Break_Other_Sum__c + Busy_Sum__c) /  60)
,
IF ( ((End_Login__c - Start_Login__c) * 1440) &gt; (VALUE(TEXT(Outsource_Type__c))*60), 450, 
((End_Login__c - Start_Login__c) * 1440) 
- 
((Break_Pray_Sum__c + Break_Rest_Sum__c + Break_Lunch_Sum__c + Break_Other_Sum__c + Busy_Sum__c) /  60)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Productivity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>