force-app/main/default/objects/PureCloud__c/fields/Queue_Group__c.field-meta.xml
<CustomField>
    <fullName>Queue_Group__c</fullName>
    <label>Queue Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>