force-app/main/default/objects/PureCloud__c/fields/Queue_Percent__c.field-meta.xml
<CustomField>
    <fullName>Queue_Percent__c</fullName>
    <formula>On_Queue_Sum__c /Staffed_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>