force-app/main/default/objects/PureCloud__c/fields/Queue_PureCloud__c.field-meta.xml
<CustomField>
    <fullName>Queue_PureCloud__c</fullName>
    <formula>TEXT(Agent_Name__r.Queue_PureCloud__c)</formula>
    <label>Queue PureCloud</label>
    <type>Text</type>
</CustomField>