force-app/main/default/objects/PureCloud__c/fields/Schedule_Login__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Login__c</fullName>
    <label>Schedule Login</label>
    <type>DateTime</type>
</CustomField>