force-app/main/default/objects/PureCloud__c/fields/Schedule_Login_F__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Login_F__c</fullName>
    <formula>IF ( TEXT(Entity__c) == &apos;AMFS&apos; &amp;&amp; CONTAINS(TEXT(Agent_Name__r.Queue_PureCloud__c), &apos;Outbound&apos;),
DATETIMEVALUE( Date__c ) + (1.5 / 24),
IF ( TEXT(Entity__c) == &apos;AMFS&apos; &amp;&amp; !CONTAINS(TEXT(Agent_Name__r.Queue_PureCloud__c), &apos;Outbound&apos;),
DATETIMEVALUE( Date__c ) + (1 / 24),
DATETIMEVALUE( Date__c ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Login F</label>
    <type>DateTime</type>
</CustomField>