force-app/main/default/objects/PureCloud__c/fields/Staffed_Sum__c.field-meta.xml
<CustomField>
    <fullName>Staffed_Sum__c</fullName>
    <formula>( End_Login__c -  Start_Login__c )*24*60*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staffed Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>