force-app/main/default/objects/PureCloud__c/fields/Start_Login__c.field-meta.xml
<CustomField>
    <fullName>Start_Login__c</fullName>
    <label>Start Login</label>
    <type>DateTime</type>
</CustomField>