force-app/main/default/objects/PureCloud__c/fields/Status_Login__c.field-meta.xml
<CustomField>
    <fullName>Status_Login__c</fullName>
    <formula>IF ( ISNULL(Schedule_Login__c), &quot;Not Available&quot;,
IF ( Schedule_Login__c &gt; Start_Login__c, &quot;On Time&quot;,&quot;Late&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Login</label>
    <type>Text</type>
</CustomField>