force-app/main/default/objects/PureCloud__c/fields/Talk_Count__c.field-meta.xml
<CustomField>
    <fullName>Talk_Count__c</fullName>
    <label>Talk Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>