force-app/main/default/objects/PureCloud__c/fields/Talk_Sum__c.field-meta.xml
<CustomField>
    <fullName>Talk_Sum__c</fullName>
    <label>Talk Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>