force-app/main/default/objects/PureCloud__c/fields/Total_Available_Sum__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Sum__c</fullName>
    <description>Total seluruh primary status dan sub status available</description>
    <formula>Admin_Sum__c +  Walk_In_Sum__c +  Outbound_Sum__c +  Follow_Up_Sum__c +  Available_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>