force-app/main/default/objects/PureCloud__c/fields/Total_Available_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Time__c</fullName>
    <formula>IF(Available_Sum__c/3600 &lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT(FLOOR(Available_Sum__c/3600)) + &quot;:&quot; + IF(FLOOR(MOD(Available_Sum__c,3600)/60)&lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT( FLOOR(MOD(Available_Sum__c,3600)/60)) + &quot;:&quot; + IF(MOD(MOD(Available_Sum__c,3600),60)&lt; 10, &apos;0&apos;,&apos;&apos;)+ TEXT(MOD(MOD(Available_Sum__c,3600),60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Available Time</label>
    <type>Text</type>
</CustomField>